infra/security_groups.tf
resource "aws_security_group" "ec2" {
  name        = "vaultbridge-ec2-sg"
  description = "Security group for VaultBridge EC2 instance"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip_cidr]
  }

  ingress {
    description = "HTTP from the internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "vaultbridge-ec2-sg"
    Environment = "dev"
    Project     = "Infrastructure Modernization"
  }
}

resource "aws_security_group" "rds" {
  name        = "vaultbridge-rds-sg"
  description = "Security group for VaultBridge RDS PostgreSQL"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "PostgreSQL from EC2 only"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ec2.id]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "vaultbridge-rds-sg"
    Environment = "dev"
    Project     = "Infrastructure Modernization"
  }
}
